--- a/website/Now/history/25-03-2025.md
+++ b/website/Now/history/25-03-2025.md
@@ -1,4 +1,4 @@
-This is a <a class='underline' href='https://nownownow.com/about'>now</a> page, and if you have your own site, you <del>should</del> can make one, too.
+This is a [now](https://nownownow.com/about) page, and if you have your own site, you ~~should~~ can make one, too.
 
 Moved to history at March 25, 2025 from Brzezina, Poland
 
@@ -10,7 +10,7 @@ My son has repeatedly asked me what I do in my work, so I showed him some code a
 
 ---
 
-## Getting Started at Docplanner and Learning .NET and C #
+## Getting Started at Docplanner and Learning .NET and C Sharp
 
 At the beginning of the year, I changed jobs and in my new role I'm dealing with technologies that are new to me. I'm trying to jump on this train and write software in C#. I started by reading "Learn C# in one day and learn it well" book. I'm working through a course on [Udemy](https://www.udemy.com/course/complete-csharp-masterclass) while practicing this new knowledge at work. At the same time, I'm also getting onboarded at Docplanner Tech where I joined as a Full Stack Software Engineer and I'm seeing lots of new things and meeting new people. Wonderful times!
 
