content: why teaching kids programming is not easy

--- a/website/Now/history/25-03-2025.md
+++ b/website/Now/history/25-03-2025.md
@@ -11,6 +11,7 @@ My son has repeatedly asked me what I do in my work, so I showed him some code a
 Connected resources:
 
 - [[Programming for Kids]]
+- [[Why teaching kids how to program is not easy]]
 
 ---
 
