content: added new article about (surprise) kitchen renovation

--- a/website/Now/history/25-03-2025.md
+++ b/website/Now/history/25-03-2025.md
@@ -34,3 +34,5 @@ For most of last year, I couldn't run which was quite painful for me. Physically
 ## Want to Be a Hero at Home
 
 We're renovating our kitchen. We ordered new furniture and appliances, and I want to rewire the electricity and lay new tiles on the wall with my own hands. I'm in the preparation phase. The serious work starts soon!
+
+I wrote a little bit about this here: [[What well-known life laws I confirmed when I did a kitchen renovation]]
