--- a/website/Journals/1. 2025-04-18.md
+++ b/website/Journals/1. 2025-04-18.md
@@ -17,16 +17,16 @@ journal-date: 2025-04-18
   - problem:
     - summarization with Ollama quality is... random
     - Llama models sometimes ignores formatting instructions
-    - To solve this, experimented with two step prom pting
+    - To solve this, experimented with two-step prompting
       - first prompt for summarizing
       - second for formatting
     - It's kinda better, but new problem appears
       - summarizing one email takes even 5 minutes
       - Ollama server sometimes go down
     - Experimented with `llama3.2-vision:11b`, but it's unstable on my local computer
-    - at the same time, when use Claude Sonnet, summarizing work much better. Formatting is ok, quality of responses are better than Ollama
+    - at the same time, when use Claude Sonnet, summarizing works much better. Formatting is ok, quality of responses are better than Ollama
   - possible solutions
-    - use chunked prompts - In logs I see many times that prompt with emails is to long like more than 7k tokens. Ollama truncates this and this may decrease quality of results
+    - use chunked prompts - In logs I see many times that prompt with emails is too long like more than 7k tokens. Ollama truncates this and this may decrease quality of results
     - Using model that can handle more tokens isn't an option to me, because
       - better model, needs more resources like 18+ GB Ram
       - but Nitro digest should work without need of having more than 16GB RAM
