feat: adde dinfor about packages to python tutorial notes

--- a/sandbox/python/python-tutorial.ipynb
+++ b/sandbox/python/python-tutorial.ipynb
@@ -1810,8 +1810,106 @@
     "\n",
     "By default when you run a module code as script, code will be not executed.\n",
     "\n",
-    "But it's possible to add `if` thant check `__name__` and if it equals `__main__` code will be executed"
+    "But it's possible to add `if` thant check `__name__` and if it equals `__main__` code will be executed.\n",
+    "\n",
+    "### Packages\n",
+    "\n",
+    "Packages contains different modules. \n",
+    "\n",
+    "\n",
+    "For example, the module name Foo.Bar designates a submodule named Bar in a package named Foo.\n",
+    "\n",
+    "If I wanted to create a collection of modules for a car repair shop management system, I could do it like this:\n",
+    "\n",
+    "```python\n",
+    "automotive/                     Top-level package\n",
+    "      __init__.py               Initialize the automotive package\n",
+    "      models/                   Subpackage for vehicle model handling\n",
+    "              __init__.py\n",
+    "              bmw.py\n",
+    "              audi.py\n",
+    "              merceds.py\n",
+    "              ...\n",
+    "      tuning/                   Subpackage for vehicle modifications\n",
+    "              __init__.py\n",
+    "              chip_tuning.py\n",
+    "              exhaust.py\n",
+    "              suspension.py\n",
+    "              ...\n",
+    "      diagnostics/              Subpackage for diagnostics\n",
+    "              __init__.py\n",
+    "              engine_analyzer.py\n",
+    "              computer_scan.py\n",
+    "              emissions_test.py\n",
+    "              ...\n",
+    "```\n",
+    "\n",
+    "Note: when you want to let Python know that directory contains packages, you must create a `__init__.py` in a directory.\n",
+    "\n",
+    "It can be an empty file, but it can also execute some initialization code. \n",
+    "\n",
+    "\n",
+    "### Importing packages\n",
+    "\n",
+    "I can import individual modules from the package, for example:\n",
+    "\n",
+    "```python\n",
+    "import automotive.tuning.chip_tuning\n",
+    "```\n",
+    "\n",
+    "This loads the submodule `automotive.tuning.chip_tuning`. It must be referenced with its full name.\n",
+    "\n",
+    "```python\n",
+    "automotive.tuning.chip_tuning.increase_power(car_model, hp_increase=50, torque_increase=80)\n",
+    "```\n",
+    "\n",
+    "An alternative way of importing the submodule is:\n",
+    "\n",
+    "```python\n",
+    "from automotive.tuning import chip_tuning\n",
+    "```\n",
+    "\n",
+    "This also loads the submodule `chip_tuning`, and makes it available without its package prefix, so it can be used as follows:\n",
+    "\n",
+    "```python\n",
+    "chip_tuning.increase_power(car_model, hp_increase=50, torque_increase=80)\n",
+    "```\n",
+    "\n",
+    "Yet another variation is to import the desired function or variable directly:\n",
+    "\n",
+    "```python\n",
+    "from automotive.tuning.chip_tuning import increase_power\n",
+    "```\n",
+    "\n",
+    "Again, this loads the submodule `chip_tuning`, but this makes its function `increase_power()` directly available:\n",
+    "\n",
+    "```python\n",
+    "increase_power(car_model, hp_increase=50, torque_increase=80)\n",
+    "```\n",
+    "\n",
+    "##### Import * \n",
+    "\n",
+    "When I want to `from automotive.tuning import *`, will it work?\n",
+    "\n",
+    "It will, but as package author I could specify what should be imported.\n",
+    "\n",
+    "To do so I need to use `__all__` in a `__init__.py`: \n",
+    "\n",
+    "```python\n",
+    "__all__ = [\"chip_tuning\", \"exhaust\", \"suspension\"] # automotive/tuning/__init__.py\n",
+    "```\n",
+    "\n",
+    "Similarly, the main package's `automotive/__init__.py` could define which subpackages should be imported with a wildcard:\n",
+    "\n",
+    "```python\n",
+    "__all__ = [\"models\", \"tuning\", \"diagnostics\"]\n",
+    "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
