chore: journal - 22-04-2025 - tried to get back to work after holiday

--- a/website/Journals/2. 2025-04-19.md
+++ b/website/Journals/2. 2025-04-19.md
@@ -12,7 +12,7 @@ journal-index: 2
 
 ### Notes
 
-- Worked on [this issue](https://github.com/Frodigo/garage/issues/97) and tried to create a working prototype with Cursor, but it was no able to handle this
+- Worked on [this issue](https://github.com/Frodigo/garage/issues/97) and tried to create a working prototype with Cursor, but it was no able to handle this #AIwillNotReplaceMeTooFast
   - it forces using tiktoken to count tokens in texts but it is not a good option for Llama models
   - boilerplate code was ok, but chunks were not created correctly
   - it tries stupid solution like: adding "safety margin with 1500 tokens to be sure that chunk size will be ok"
