feat: added input&output to the python tutorial

--- a/sandbox/python/level0-python-basics/python-tutorial-notes.ipynb
+++ b/sandbox/python/level0-python-basics/python-tutorial-notes.ipynb
@@ -1909,17 +1909,406 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Input and Output "
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Formatted string literals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Marcin drives a Porshe 911.'"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "driver = 'Marcin'\n",
+    "car = 'Porshe 911'\n",
+    "\n",
+    "f'{driver} drives a {car}.'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### str.format()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'10.18% of drivers are drifters.'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "drivers = 12_123_543\n",
+    "drifters = 1_234_567\n",
+    "drifters_percent = drifters / drivers\n",
+    "\n",
+    "'{:.2%} of drivers are drifters.'.format(drifters_percent)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Any variable can be converted to string by using `str()`\n",
+    "\n",
+    "Also there is a `repr()` function. \n",
+    "\n",
+    "It returns a printable representation of object. It's useful for:\n",
+    "- debugging\n",
+    "- getting raw string representation of objects\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3]\n",
+      "[1, 2, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(repr([1, 2, 3]))\n",
+    "print(str([1, 2, 3]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "What is a difference between the `repr()` and the `str()`?\n",
+    "\n",
+    "`str()` output is readable for humans, `repr()` generates representations which can be read by the interpreter , including details like quotes and escape characters."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### f-strings\n",
+    "\n",
+    "Allows to specify formatting when printing something."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW      was produced in 1998.\n",
+      "Toyota   was produced in 2005.\n",
+      "Honda    was produced in 2010.\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars = {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n",
+    "\n",
+    "for car, year in cars.items():\n",
+    "    print(f'{car:8} was produced in {year}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Other modifiers \n",
+    "\n",
+    "- '!a' applies `ascii()`\n",
+    "- '!s' applies `str()`\n",
+    "- '!r' applies `repr()`\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My favorite cars are {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n",
+      "My favorite cars are {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n",
+      "My favorite cars are {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n",
+      "My favorite cars are {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n"
+     ]
+    }
+   ],
+   "source": [
+    "favorite_cars = ['FSO', 'Dacia', 'Fiat']\n",
+    "print(f'My favorite cars are {cars}')\n",
+    "print(f'My favorite cars are {cars!a}')\n",
+    "print(f'My favorite cars are {cars!s}')\n",
+    "print(f'My favorite cars are {cars!r}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### the `=` specifier in f-strings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "car='BMW' has been in the garage for years=25 years in garage='Wrocław'.\n"
+     ]
+    }
+   ],
+   "source": [
+    "car = 'BMW'\n",
+    "years = 25\n",
+    "garage = 'Wrocław'\n",
+    "\n",
+    "print(f'{car=} has been in the garage for {years=} years in {garage=}.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It's nice for debugging purposes. It prints both - variable name and its value.\n",
+    "\n",
+    "### More on `str.format()` \n",
+    "\n",
+    "#### Basic usage"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW is a car that is fast.\n",
+      "BMW or Porshe?\n",
+      "Porshe or BMW?\n",
+      "BMW or Porshe?\n",
+      "BMW or Porshe?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('BMW is a {} that is {}.'.format('car', 'fast'))\n",
+    "print('{0} or {1}?'.format('BMW', 'Porshe'))\n",
+    "print('{1} or {0}?'.format('BMW', 'Porshe')) \n",
+    "print('{car} or {other}?'.format(car='BMW', other='Porshe'))\n",
+    "print('{car} or {other}?'.format(other='Porshe', car='BMW'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Reference the variable to be formatted by name instead of position."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "BMW: 1998; Toyota: 2005; Honda: 2010\n",
+      "BMW: 1998; Toyota: 2005; Honda: 2010\n"
+     ]
+    }
+   ],
+   "source": [
+    "table = {'BMW': 1998, 'Toyota': 2005, 'Honda': 2010}\n",
+    "print('BMW: {0[BMW]:d}; Toyota: {0[Toyota]:d}; Honda: {0[Honda]:d}'.format(table))\n",
+    "print('BMW: {BMW:d}; Toyota: {Toyota:d}; Honda: {Honda:d}'.format(**table))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reading and writing files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = open('testfile.txt', 'w')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Modes:\n",
+    "- `r` - reading (default)\n",
+    "- `w` - writing\n",
+    "- `a` - appending\n",
+    "- `r+` - reading and writing\n",
+    "\n",
+    "Appending `b` to mode opens a file in binary mode.\n",
+    "\n",
+    "#### `with` keyword\n",
+    "\n",
+    "Thanks to the `with` keyword, file is properly closed after its suite finishes, even if exception is raised. Using `with` is shorter than using a `try-finally` blocks and do the same: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello world!\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('testfile.txt') as f:\n",
+    "    for line in f:\n",
+    "        print(line)  # Print each line without adding extra newline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Without using `with` you should use `f.close()` to make sure that file is closes. With `with` you don't have to, because it will be closed automatically.\n",
+    "\n",
+    "#### Methods of file objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello world!\\n'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_file = open('testfile.txt')\n",
+    "\n",
+    "# Read the entire file\n",
+    "my_file.read() \n",
+    "# Read the first line\n",
+    "my_file.readline()\n",
+    "\n",
+    "my_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_file = open('testfile.txt', 'w')\n",
+    "\n",
+    "my_file.write('Hello, Sebix!\\n')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving structured data with `json`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "\n",
+    "data = {'name': 'Sebix', 'age': 25, 'cars': ['BMW', 'Porshe']}\n",
+    "\n",
+    "json.dumps(data)\n",
+    "\n",
+    "json.dump(data, my_file)  # Write JSON data to file\n",
+    "my_file.close()"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1933,7 +2322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
