feat(#97): split text into chunks

--- a/website/Journals/6. 2025-04-23 - split text into chunks.md
+++ b/website/Journals/6. 2025-04-23 - split text into chunks.md
@@ -5,7 +5,7 @@ journal-index: 6
 ---
 ### Goals
 
-- [ ] chunked prompts #NitroDigest #Python
+- [x] chunked prompts #NitroDigest #Python
 
 ### Notes
 
