--- a/sandbox/python/level0-python-basics/python-tutorial-notes.ipynb
+++ b/sandbox/python/level0-python-basics/python-tutorial-notes.ipynb
@@ -2304,6 +2304,212 @@
     "json.dump(data, my_file)  # Write JSON data to file\n",
     "my_file.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Errors and exceptions\n",
+    "\n",
+    "Each exception has a type like `ZeroDivisionError`, `NameError`, `TypeError`\n",
+    "\n",
+    "### Handling exceptions \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "File not found. Please check the file path.\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    my_file = open('this_file_not_exist.txt', 'r')\n",
+    "    data = json.load(my_file)  # Read JSON data from file\n",
+    "    print(data)\n",
+    "except FileNotFoundError:\n",
+    "    print(\"File not found. Please check the file path.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If I don't handle exception it will be passed tou outer `try` statement. \n",
+    "\n",
+    "If no handler found, `unhandled exception` will be thrown.\n",
+    "\n",
+    "It's possible to handle multiple exception at the same time:\n",
+    "\n",
+    "```python\n",
+    "except (TypeError, NameError):\n",
+    "    pass\n",
+    "```\n",
+    "\n",
+    "`BaseException` is the base class for all exceptions.\n",
+    "\n",
+    "When I want to handle almost everything, I can use `Exception`\n",
+    "\n",
+    "Good practice is to specify as close as possible which type of Exceptions I handle. \n",
+    "\n",
+    "Exception that i don't want to handle, I re-raise it to higher layer. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Conversion error\n"
+     ]
+    }
+   ],
+   "source": [
+    "try: \n",
+    "    file = open('testfile.txt', 'r')\n",
+    "    data = file.read()\n",
+    "    number = int(data)\n",
+    "except OSError:\n",
+    "    print(\"File error\")\n",
+    "except ValueError:\n",
+    "    print(\"Conversion error\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An unexpected error occurred: {e}\")\n",
+    "    raise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interesting, `try...excep`t statement has also `else clause`.\n",
+    "\n",
+    "It's useful when some code must be executed if the `try` doesn't raise any exceptions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Sebix!\n",
+      "{\"name\": \"Sebix\", \"age\": 25, \"cars\": [\"BMW\", \"Porshe\"]}{\"name\": \"Sebix\", \"age\": 25, \"cars\": [\"BMW\", \"Porshe\"]}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    my_file = open('testfile.txt', 'r')\n",
+    "except OSError as e:\n",
+    "    print(f\"File error: {e}\")\n",
+    "else:   \n",
+    "    data = my_file.read()\n",
+    "    print(data)\n",
+    "    my_file.close()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Raising exceptions \n",
+    "\n",
+    "I can just `raise` and Exception.\n",
+    "\n",
+    "I can also raise a specific exception:\n",
+    "\n",
+    "`raise NameError`\n",
+    "\n",
+    "### Defining own exceptions\n",
+    "\n",
+    "Own exceptions should inherit from the `Exception` class.\n",
+    "\n",
+    "\n",
+    "### Finally clause\n",
+    "\n",
+    " The `finally` clause runs whether or not the try statement produces an exception.\n",
+    "\n",
+    " In real world applications, the finally clause is useful for releasing external resources (such as files or network connections), regardless of whether the use of the resource was successful.\n",
+    "\n",
+    " ### Adding notes to exceptions\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'notfound.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mFileNotFoundError\u001b[39m                         Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[6]\u001b[39m\u001b[32m, line 2\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28;43mopen\u001b[39;49m\u001b[43m(\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mnotfound.txt\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m)\u001b[49m:\n\u001b[32m      3\u001b[39m         \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mFileNotFoundError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/.local/lib/python3.12/site-packages/IPython/core/interactiveshell.py:325\u001b[39m, in \u001b[36m_modified_open\u001b[39m\u001b[34m(file, *args, **kwargs)\u001b[39m\n\u001b[32m    318\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m file \u001b[38;5;129;01min\u001b[39;00m {\u001b[32m0\u001b[39m, \u001b[32m1\u001b[39m, \u001b[32m2\u001b[39m}:\n\u001b[32m    319\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\n\u001b[32m    320\u001b[39m         \u001b[33mf\u001b[39m\u001b[33m\"\u001b[39m\u001b[33mIPython won\u001b[39m\u001b[33m'\u001b[39m\u001b[33mt let you open fd=\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mfile\u001b[38;5;132;01m}\u001b[39;00m\u001b[33m by default \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    321\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33mas it is likely to crash IPython. If you know what you are doing, \u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    322\u001b[39m         \u001b[33m\"\u001b[39m\u001b[33myou can use builtins\u001b[39m\u001b[33m'\u001b[39m\u001b[33m open.\u001b[39m\u001b[33m\"\u001b[39m\n\u001b[32m    323\u001b[39m     )\n\u001b[32m--> \u001b[39m\u001b[32m325\u001b[39m \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mio_open\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfile\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43margs\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mkwargs\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[31mFileNotFoundError\u001b[39m: [Errno 2] No such file or directory: 'notfound.txt'",
+      "This file is not found."
+     ]
+    }
+   ],
+   "source": [
+    "try:\n",
+    "    with open('notfound.txt', 'r'):\n",
+    "        pass\n",
+    "except FileNotFoundError as e:\n",
+    "    e.add_note(\"This file is not found.\")\n",
+    "    raise\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Classes\n",
+    "\n",
+    "- class members are public\n",
+    "- all member functions are virtual\n",
+    "- classes themselves are objects\n",
+    "\n",
+    "### Namespaces\n",
+    "\n",
+    "A `namespace` is a mapping from names to objects. \n",
+    "\n",
+    "Examples:\n",
+    "- set of bulit-in-names (that contains functions like `abs()`)\n",
+    "- global names in a module\n",
+    "- local names in a function invokation\n",
+    "\n",
+    "The set of attributes of an object also form a namespace. \n",
+    "\n",
+    "Attribute is a any name followed by dot like `mymodule.foobar`\n",
+    "\n",
+    "- namespaces are created in different moments\n",
+    "- have different lifetimes\n",
+    "- namespace for bulit-in names is created when Python interpreters starts up and is never deleted\n",
+    "- global namespace for a module is created when the module definition is read in\n",
+    "- local namespace for a function is created when the function is called\n",
+    "- deleted when the function returns or raises an exception that is not handled within the function\n",
+    "- `scope` is a textual region of a Python program where namespace is directly accessible."
+   ]
   }
  ],
  "metadata": {
