chore: added journal with CLI tools best practices learning part 3

--- a/website/Journals/2. 2025-04-19 - split text into chunks part 1.md
+++ b/website/Journals/2. 2025-04-19 - split text into chunks part 1.md
@@ -43,3 +43,5 @@ journal-index: 2
 - NLTK:
   - [https://github.com/nltk/nltk](https://github.com/nltk/nltk)
   - [https://www.nltk.org](https://www.nltk.org)
+
+Continuation: [[6. 2025-04-23 - split text into chunks part 2]]
