--- a/website/Journals/6. 2025-04-23 - split text into chunks part 2.md
+++ b/website/Journals/6. 2025-04-23 - split text into chunks part 2.md
@@ -3,6 +3,7 @@ journal: Garage
 journal-date: 2025-04-23
 journal-index: 6
 ---
+
 ### Goals
 
 - [x] chunked prompts #NitroDigest #Python
@@ -14,13 +15,15 @@ journal-index: 6
 ### Challenges & solutions
 
 - How to split text into sentences?
-	- regular expressions
-	- NLTK
-	- SpaCy
-	- pre-trained models
-	- I used NLTK
+  - regular expressions
+  - NLTK
+  - SpaCy
+  - pre-trained models
+  - I used NLTK
 
 ### Useful snippets & resources
 
 - [https://medium.com/@ravindul97/sentence-splitting-in-nlp-2948c90de4a2]
 - [https://www.nltk.org/api/nltk.tokenize.sent_tokenize.html]
+
+Continuation: [[7. 2025-04-24 - split text into chunks part 3]]
