chore: updated journals

--- a/website/Journals/13. 2025-04-30 - research & development.md
+++ b/website/Journals/13. 2025-04-30 - research & development.md
@@ -32,3 +32,5 @@ journal-index: 13
 - <https://github.com/humanwhocodes/crosspost>
 - <https://github.com/dahlia/yoyak>
 - <https://pandoc.org/try/>
+- Manjaro
+  - <https://manjaro.org>
