chore: added notes, journal, started new learning project

--- a/website/Blog/4. Historical cryptography algorithms.md
+++ b/website/Blog/4. Historical cryptography algorithms.md
@@ -5,7 +5,7 @@ title: Historical cryptography algorithms
 
 *Last updated: 22/03/2025*
 
-My first task on the [[Cybersecurity]] course at studies was about experimenting with historical cryptography algorithms.
+My first task on the [[Cybersecurity learning roadmap]] course at studies was about experimenting with historical cryptography algorithms.
 
 I was sitting in the computer room, it was quite stuffy, and around me were 30 other students. It was the third class of the day. The lecturer came in, who looked like a rather strict gentleman. He explained to us briefly what the course would look like and what the rules were for passing.
 
@@ -49,7 +49,7 @@ I ran Cryptool installer:
 
 Then I was able to run it (I installed the polish version)
 
-![Cryptool1 installed on Mac](Garage/Cybersecurity/images/cryptool-installed.png)
+![Cryptool1 installed on Mac](Notes%20&%20Learning/Engineering/Cybersecurity/images/cryptool-installed.png)
 
 ## Algorithms
 
@@ -328,7 +328,7 @@ Hill is a block substitution cipher that significantly changes the statistical p
 Język polski należy do grupy języków zachodniosłowiańskich. Charakteryzuje się bogatym słownictwem oraz złożoną gramatyką. Zawiera wiele znaków diakrytycznych, takich jak ą, ę, ć, ł, ń, ó, ś, ź czy ż. W polszczyźnie występuje siedem przypadków oraz trzy rodzaje gramatyczne. Teksty pisane po polsku mają specyficzny rozkład częstotliwości liter, gdzie samogłoski takie jak a, e, i, o stanowią znaczący procent. Spółgłoski takie jak t, n, r, s, w również pojawiają się często. Rzadziej występują litery q, v czy x, które znajdują się głównie w wyrazach zapożyczonych. Język polski wyróżnia się na tle innych języków europejskich nagromadzeniem spółgłosek, co widać w słowach takich jak "chrząszcz" czy "źdźbło". Niezwykle ważne w polszczyźnie są miękkości i twardości głosek, które wpływają na znaczenie wyrazów. Polski zasób słownictwa jest stale wzbogacany przez nowe wyrazy, często adaptowane z innych języków. Struktura zdań bywa rozbudowana, z wieloma formami czasowników oraz użyciem imiesłowów. Typowy tekst w języku polskim zawiera wszystkie te charakterystyczne elementy, które tworzą niepowtarzalny profil statystyczny naszego języka.
 ```
 
-![polish plain text histogram](Garage/Cybersecurity/images/histogram-plain-pl.png)
+![polish plain text histogram](Notes%20&%20Learning/Engineering/Cybersecurity/images/histogram-plain-pl.png)
 
 I can see that the vowels A, E, I, O dominate.
 
@@ -338,7 +338,7 @@ I can see that the vowels A, E, I, O dominate.
 The English language belongs to the West Germanic branch of the Indo-European language family. It is widely spoken across the globe, serving as a primary or secondary language for millions of people. English features twenty-six letters without diacritical marks, unlike many European languages. Its alphabet consists of five vowels and twenty-one consonants, though the letter 'y' sometimes functions as a vowel. Frequent letters include e, t, a, o, and i, while less common ones are z, q, and x. English vocabulary incorporates words from numerous languages, including Latin, French, Greek, and German, making it lexically rich and diverse. Grammatically, English has simplified many of its inflectional forms compared to Old English, relying more on word order and auxiliary verbs to convey meaning. Sentence structure typically follows subject-verb-object pattern, though variations exist for questions and certain expressions. This representative text contains all the characteristic elements that create the unique statistical profile of the English language.
 ```
 
-![english plain text histogram](Garage/Cybersecurity/images/hidtogram-plain-eng.png)
+![english plain text histogram](Notes%20&%20Learning/Engineering/Cybersecurity/images/hidtogram-plain-eng.png)
 
 I can see that the letter "E" is the most frequent use comparing to "A" in polsih.
 
@@ -348,7 +348,7 @@ I can see that the letter "E" is the most frequent use comparing to "A" in polsi
 La lingua italiana appartiene al gruppo delle lingue romanze, derivata direttamente dal latino. È caratterizzata da una ricca sonorità e da un'ampia gamma di vocali. L'italiano utilizza ventiuno lettere dell'alfabeto latino, con l'aggiunta di cinque lettere straniere usate solo in parole di origine estera. Le vocali a, e, i, o, u sono molto frequenti e rappresentano una percentuale significativa del testo scritto. Tra le consonanti, le più comuni sono l, r, n, t e s. L'italiano si distingue per la presenza di consonanti doppie che modificano la pronuncia e il significato delle parole. Gli accenti sono importanti e vengono usati principalmente sulle vocali finali, come à, è, ì, ò, ù. La struttura grammaticale include tre generi (maschile, femminile e neutro, quest'ultimo limitato a pochi casi) e un sistema verbale complesso con numerosi tempi e modi. Il vocabolario italiano è stato arricchito nel corso dei secoli da influenze greche, arabe, spagnole e francesi. Questo testo rappresentativo contiene tutti gli elementi caratteristici che creano il profilo statistico unico della lingua italiana.
 ```
 
-![italian plain text histogram](Garage/Cybersecurity/images/histogram-plain-ita.png)
+![italian plain text histogram](Notes%20&%20Learning/Engineering/Cybersecurity/images/histogram-plain-ita.png)
 
 ---
 
@@ -356,10 +356,10 @@ La lingua italiana appartiene al gruppo delle lingue romanze, derivata direttame
 
 I used polish text and here are histograms:
 
-![histogram caesar](Garage/Cybersecurity/images/histogram-encrypt-cesar.png)
+![histogram caesar](Notes%20&%20Learning/Engineering/Cybersecurity/images/histogram-encrypt-cesar.png)
 
-![histogram vigenere](Garage/Cybersecurity/images/histogram-encrypt-vine.png)
-![histogram hill](Garage/Cybersecurity/images/histogram-encrypt-hill.png)
+![histogram vigenere](Notes%20&%20Learning/Engineering/Cybersecurity/images/histogram-encrypt-vine.png)
+![histogram hill](Notes%20&%20Learning/Engineering/Cybersecurity/images/histogram-encrypt-hill.png)
 
 The Caesar cipher preserves this distinctive pattern but shifts it along the alphabet, maintaining the same frequency peaks but at different letter positions.
 
