fix: fixed links formats
I realized that links doesn't work on Github and it was because in Obsidiad I used Wikilinks.
Changed Obsidian's config to start using 'classic' markdow links, edited MD files and from now links should work
on Github.

--- a/Blog/4. Historical cryptography algorithms.md
+++ b/Blog/4. Historical cryptography algorithms.md
@@ -5,7 +5,7 @@ title: Historical cryptography algorithms
 
 *Last updated: 22/03/2025*
 
-My first task on the [[Cybersecurity learning roadmap]] course at studies was about experimenting with historical cryptography algorithms.
+My first task on the [Cybersecurity learning roadmap](Cybersecurity%20learning%20roadmap.md) course at studies was about experimenting with historical cryptography algorithms.
 
 I was sitting in the computer room, it was quite stuffy, and around me were 30 other students. It was the third class of the day. The lecturer came in, who looked like a rather strict gentleman. He explained to us briefly what the course would look like and what the rules were for passing.
 
@@ -59,10 +59,10 @@ In the scope of task I had: *Cesar*, *Vigenere*, *Hill* and *XOR*. Let's take a 
 
 ### Caesar's [[Cipher]]
 
-It's one of the oldest and simplest [[Encryption]] algorithm invented (or at least associated with) Julius Caesar.
+It's one of the oldest and simplest  [Encryption](Encryption.md) algorithm invented (or at least associated with) Julius Caesar.
 
 Cesar used in in around 58 BC. How it worked? It scrambled a message by shifting its letters.
-Technically speaking is a [[Monoalphabetic rotation ciphers]] it shifts letters by 3, but there is also a variant called `ROT-13` that shifts letters by 13.
+Technically speaking is a [Monoalphabetic rotation ciphers](Monoalphabetic%20rotation%20ciphers.md) it shifts letters by 3, but there is also a variant called `ROT-13` that shifts letters by 13.
 
 I implemented the Caesar cipher in C# for learning purposes.
 
@@ -99,12 +99,12 @@ flowchart TD
 
 ### Vigenère cipher
 
-It's a [[polyalphabetic substitution cipher]] which uses a keyword to encrypt and decrypt messages.
+It's a [polyalphabetic substitution cipher](polyalphabetic%20substitution%20cipher.md) which uses a keyword to encrypt and decrypt messages.
 
 **How it works?**
 
 1. Each letter of the key specifies a different shift
-2. Same plaintext letter can encrypt to different [[Ciphertext]] letters
+2. Same plaintext letter can encrypt to different [Ciphertext](Ciphertext.md) letters
 3. Algorithm takes two inputs: message(plaintext) and key(password).
 4. Algorithm prepare key by repeating it to the message length.
 5. Then it intitialize empty result string.
