--- a/Now/History/25-03-2025.md
+++ b/Now/History/25-03-2025.md
@@ -10,8 +10,8 @@ My son has repeatedly asked me what I do in my work, so I showed him some code a
 
 Connected resources:
 
-- [[Programming for Kids]]
-- [[Why teaching kids how to program is not easy]]
+- [Programming for Kids](Programming%20for%20Kids.md)
+- [Why teaching kids how to program is not easy](Why%20teaching%20kids%20how%20to%20program%20is%20not%20easy.md)
 
 ---
 
@@ -35,4 +35,4 @@ For most of last year, I couldn't run which was quite painful for me. Physically
 
 We're renovating our kitchen. We ordered new furniture and appliances, and I want to rewire the electricity and lay new tiles on the wall with my own hands. I'm in the preparation phase. The serious work starts soon!
 
-I wrote a little bit about this here: [[What well-known life laws I confirmed when I did a kitchen renovation]]
+I wrote a little bit about this here: [What well-known life laws I confirmed when I did a kitchen renovation](What%20well-known%20life%20laws%20I%20confirmed%20when%20I%20did%20a%20kitchen%20renovation.md)
