docs: added guide about how to summarize files in directory
Described how to use NitroDigest for summarizing files in one directory.

Also updated journal and fixed small type in docs main page

--- a/Projects/Nitrodigest/Journals/13. Creating docs.md
+++ b/Projects/Nitrodigest/Journals/13. Creating docs.md
@@ -16,9 +16,17 @@
 	- I also found this <https://aerc-mail.org/>  which I want to explore as a email client for terminal.
 - Also did a research about Slack API and Slack CLI
 - Wrote guide for [Summarizing a Single File](Summarizing%20a%20Single%20File.md)
+- Wrote a guide for [Summarizing All Files in a Directory](Summarizing%20All%20Files%20in%20a%20Directory.md)
+- Created a new issue for implementing a progress bar <https://github.com/Frodigo/garage/issues/157>
+- Created a new issue for implementing error handling for processing multiple files <https://github.com/Frodigo/garage/issues/158>
 
 ## Related pull requests
 
 - <https://github.com/Frodigo/garage/pull/146>
 - <https://github.com/Frodigo/garage/pull/147>
 - <https://github.com/Frodigo/garage/pull/156>
+
+## Related issues
+
+- <https://github.com/Frodigo/garage/issues/157>
+- <https://github.com/Frodigo/garage/issues/158>
