chore: small update to python tutorial notes

--- a/Projects/Testtrack/python/level0-python-basics/python-tutorial-notes.ipynb
+++ b/Projects/Testtrack/python/level0-python-basics/python-tutorial-notes.ipynb
@@ -2508,7 +2508,32 @@
     "- global namespace for a module is created when the module definition is read in\n",
     "- local namespace for a function is created when the function is called\n",
     "- deleted when the function returns or raises an exception that is not handled within the function\n",
-    "- `scope` is a textual region of a Python program where namespace is directly accessible."
+    "- `scope` is a textual region of a Python program where namespace is directly accessible.\n",
+    "\n",
+    "### Class objects\n",
+    "\n",
+    "- two kinds of operations are supported:\n",
+    "    - attribute reference\n",
+    "    - initialization\n",
+    "\n",
+    "You can initialize a class by using function notation like this:\n",
+    "\n",
+    "```python\n",
+    "my_new_class = MyClass()\n",
+    "```\n",
+    "\n",
+    "This creates a new **instance** of a class and assigns it to the  `x` variable.\n",
+    "\n",
+    "Class can have and `__init__` method, that will be automatically invoked when new instance of class \n",
+    "is created.\n",
+    "\n",
+    "### Inheritance\n",
+    "\n",
+    "Python supports inheritance and multi-inheritance.\n",
+    "\n",
+    "There are two useful methods that work with inheritance:\n",
+    "1. `isinstaance()`\n",
+    "2. `issubclass()`"
    ]
   }
  ],
