docs: guide for prompting
Described how to overwrite default prompt and showed possible configuration options

--- a/Projects/Nitrodigest/Journals/13. Creating docs.md
+++ b/Projects/Nitrodigest/Journals/13. Creating docs.md
@@ -19,14 +19,18 @@
 - Wrote a guide for [Summarizing All Files in a Directory](Summarizing%20All%20Files%20in%20a%20Directory.md)
 - Created a new issue for implementing a progress bar <https://github.com/Frodigo/garage/issues/157>
 - Created a new issue for implementing error handling for processing multiple files <https://github.com/Frodigo/garage/issues/158>
+- Added guide for prompting [Overriding Prompt Templates](Overriding%20Prompt%20Templates.md)
+- Found another bug: <https://github.com/Frodigo/garage/issues/161>
 
 ## Related pull requests
 
 - <https://github.com/Frodigo/garage/pull/146>
 - <https://github.com/Frodigo/garage/pull/147>
 - <https://github.com/Frodigo/garage/pull/156>
+- <https://github.com/Frodigo/garage/pull/162>
 
 ## Related issues
 
 - <https://github.com/Frodigo/garage/issues/157>
 - <https://github.com/Frodigo/garage/issues/158>
+- <https://github.com/Frodigo/garage/issues/161>
