docs: added guide about how to summarize emails (#168)
* docs: added guide about how to summarize emails

Basic information how to use nitrodigest to summarize emails

--- a/Projects/Nitrodigest/Journals/13. Creating docs.md
+++ b/Projects/Nitrodigest/Journals/13. Creating docs.md
@@ -21,6 +21,9 @@
 - Created a new issue for implementing error handling for processing multiple files <https://github.com/Frodigo/garage/issues/158>
 - Added guide for prompting [Overriding Prompt Templates](Overriding%20Prompt%20Templates.md)
 - Found another bug: <https://github.com/Frodigo/garage/issues/161>
+- Added guides for [Using a Custom Configuration](Using%20a%20Custom%20Configuration.md) and [Understanding the Output Format](Understanding%20the%20Output%20Format.md)
+- Added small guide for [Summarizing Email Newsletters](Summarizing%20Email%20Newsletters.md)
+- Found critical bug [summarizing multiple emails doesn't work properly](https://github.com/Frodigo/garage/issues/166)
 
 ## Related pull requests
 
@@ -28,9 +31,13 @@
 - <https://github.com/Frodigo/garage/pull/147>
 - <https://github.com/Frodigo/garage/pull/156>
 - <https://github.com/Frodigo/garage/pull/162>
+- <https://github.com/Frodigo/garage/pull/164>
+- <https://github.com/Frodigo/garage/pull/168>
 
 ## Related issues
 
 - <https://github.com/Frodigo/garage/issues/157>
 - <https://github.com/Frodigo/garage/issues/158>
 - <https://github.com/Frodigo/garage/issues/161>
+- <https://github.com/Frodigo/garage/issues/166>
+- <https://github.com/Frodigo/garage/issues/167>
