chore: content update
Updated content including the Now page. Removed outdated content and things that I will not working in the following weeks.

--- a/Now/History/06-06-2025.md
+++ b/Now/History/06-06-2025.md
@@ -1,6 +1,6 @@
 This is a [now](https://nownownow.com/about) page, and if you have your own site, you ~~should~~ can make one, too.
 
-Updated March 25, 2025 from Brzezina, Poland
+Moved to history at June 06, 2025 from Brzezina, Poland
 
 ---
 
@@ -63,11 +63,3 @@ The prototype can already pull unread mail via IMAP, feed it to a local Llama mo
 I am close to have working prototype. Project is open source (it's here: [https://github.com/Frodigo/garage/tree/main/tools/NitroDigest](https://github.com/Frodigo/garage/tree/main/tools/NitroDigest))
 
 I look for contributors. Maybe you?
-
----
-
-## History
-
-Below you can find my historical now pages. Date along the title means a day when a page was moved to the history.
-
-- [25-03-2025](25-03-2025.md)
