fix: fixed typo

--- a/Projects/Nitrodigest/Journals/14. Fixing bugs and releasing alpha version.md
+++ b/Projects/Nitrodigest/Journals/14. Fixing bugs and releasing alpha version.md
@@ -5,7 +5,7 @@
 - I removed this crazy logic and also I added preprocessors that clean text before it is sent to LLM.
 - the next bug was related to broken pipe. It was not possible to pass output from previous process to nitrodigest using pipe. I fixed it and changed CLI API and from now it accept input as an argument instead of flag.
 - The next thing I fixed was related to broken progress indicator during processing multiple emails. Even if there was an error and email was not processed, nitrodigest printed that all emails were processed successfuly.
-- I wrote a bash script that simplifies reading emails using himalaya. It's published as gist. Documentation is uptaded
+- I wrote a bash script that simplifies reading emails using himalaya. It's published as gist. Documentation is updated
 - At this moment I consider Nitrodigest first version as done.
 - The next step is to promote it and find users that will want to use it and give some feedback
 
