fix: fixed link generation in rss feed
Dropped support for wiki links, refactored feed.xml.js

--- a/Projects/Nitrodigest/Journals/2. Split text into chunks part 1.md
+++ b/Projects/Nitrodigest/Journals/2. Split text into chunks part 1.md
@@ -8,7 +8,7 @@ journal-index: 2
 
 - [x] #NitroDigest read and answer in discussion about OOP: [https://github.com/Frodigo/garage/discussions/64]
 - [x] #NitroDigest research about chunked prompts [https://github.com/Frodigo/garage/issues/97]
-- [x] #Garage add info about NitroDigest project to the [[Now]] page
+- [x] #Garage add info about NitroDigest project to the now page
 
 ### Notes
 
@@ -43,5 +43,3 @@ journal-index: 2
 - NLTK:
   - [https://github.com/nltk/nltk](https://github.com/nltk/nltk)
   - [https://www.nltk.org](https://www.nltk.org)
-
-Continuation: [[6. 2025-04-23 - split text into chunks part 2]]
