--- a/Projects/Nitrodigest/Journals/6. Learn about CLI tools best practices part 1.md
+++ b/Projects/Nitrodigest/Journals/6. Learn about CLI tools best practices part 1.md
@@ -10,7 +10,7 @@ journal-index: 9
 
 ### Notes
 
-- [[Notes from CLIG]]
+- [Notes from CLIG](Notes%20from%20CLIG.md)
 
 ### Challenges & solutions
 
