--- a/Projects/Nitrodigest/Journals/7. Learn about CLI tools best practices part 2.md
+++ b/Projects/Nitrodigest/Journals/7. Learn about CLI tools best practices part 2.md
@@ -11,7 +11,7 @@ journal-index: 11
 
 ### Notes
 
-- busy day, but I was able to read all content from [clig.dev](https://clig.dev) and make notes [[Notes from CLIG]] #NitroDigest
+- busy day, but I was able to read all content from [clig.dev](https://clig.dev) and make notes [Notes from CLIG](Notes%20from%20CLIG.md) #NitroDigest
 
 ### Challenges & solutions
 
